# blasteroids

./: .gitignore  AUTHORS  Makefile.am  configure.ac
src/: Makefile.am  asteroid.c  asteroid.h  blast.c  blast.h  blasteroids.c  blasteroids.h  collision.c  collision.h  effect.c  effect.h  error.c  error.h  input.c  input.h  l.c  l.h  list.c  list.h  listd.c  listd.h  main.c  movement.c  movement.h  recycle.c  recycle.h  score.c  score.h  sound.c  sound.h  spaceship.c  spaceship.h  status.c  status.h
