ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src

imagedir = @PKG_DATA_DIR@/image
musicdir = @PKG_DATA_DIR@/music
sounddir = @PKG_DATA_DIR@/sound

nobase_dist_pkgdata_DATA = \
	$(imagedir)/space.png \
	$(musicdir)/01-speedway.ogg \
	$(sounddir)/bangLarge.wav \
	$(sounddir)/bangMedium.wav \
	$(sounddir)/bangSmall.wav \
	$(sounddir)/fire.wav \
	$(sounddir)/thrust.wav
