ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src

imagedir = @PACKAGE_DATA_SRCDIR@/image
musicdir = @PACKAGE_DATA_SRCDIR@/music
sounddir = @PACKAGE_DATA_SRCDIR@/sound

nobase_dist_pkgdata_DATA = \
	$(imagedir)/space.png \
	$(musicdir)/01-speedway.ogg \
	$(sounddir)/bangLarge.wav \
	$(sounddir)/bangMedium.wav \
	$(sounddir)/bangSmall.wav \
	$(sounddir)/fire.wav \
	$(sounddir)/thrust.wav
